--- a/liborigin.pc.in
+++ b/liborigin.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
 Name: liborigin
 Description: Library for reading OriginLab files
-Version: @LIBORIGIN_VERSION_MAJOR@.@LIBORIGIN_VERSION_MINOR@.@LIBORIGIN_VERSION_BUGFIX@
+Version: @liborigin_VERSION_MAJOR@.@liborigin_VERSION_MINOR@.@liborigin_VERSION_PATCH@
 
 Requires:
 Libs: -L${libdir} -lorigin
